--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ plug.vim.old
 config/nvim/spell
 config/nvim/shada
 config/nvim/plugged
+config/nvim/session
 vim/vim.symlink/spell/
 vim/vim.symlink/plugged/
 zsh/.oh-my-zsh/
