--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ config/nvim/spell
 config/nvim/shada
 config/nvim/plugged
 config/nvim/session
+config/rofi/themes
 vim/vim.symlink/spell/
 vim/vim.symlink/plugged/
 zsh/.oh-my-zsh/
