--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule ".config/base16-shell"]
-	path = .config/base16-shell
-	url = git@github.com:chriskempson/base16-shell.git
+[submodule "resources/fonts/NerdFonts/cheatsheet"]
+	path = resources/fonts/NerdFonts/cheatsheet
+	url = git@github.com:just3ws/nerd-font-cheatsheets.git
