--- a/config/i3/config
+++ b/config/i3/config
@@ -10,6 +10,7 @@
 
 set $mod Mod4
 
+
 # set default desktop layout (default is tiling)
 # workspace_layout tabbed <stacking|tabbed>
 
@@ -24,7 +25,7 @@ hide_edge_borders none
 # change borders
 bindsym $mod+u border none
 bindsym $mod+y border pixel 2
-bindsym $mod+n border normal
+bindsym $mod+b border normal
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -158,8 +159,8 @@ bindsym $mod+Shift+Right move right
 
 # workspace back and forth (with/without active container)
 workspace_auto_back_and_forth yes
-bindsym $mod+b workspace back_and_forth
-bindsym $mod+Shift+b move container to workspace back_and_forth; workspace back_and_forth
+# bindsym $mod+b workspace back_and_forth
+# bindsym $mod+Shift+b move container to workspace back_and_forth; workspace back_and_forth
 
 # split orientation
 bindsym $mod+z split h;exec notify-send 'tile horizontally'
@@ -215,6 +216,7 @@ set $ws6 6
 set $ws7 7
 set $ws8 8
 set $ws9 9
+set $ws10 10
 
 # set the connected monitors
 set $monitor1 HDMI2
@@ -421,6 +423,8 @@ exec_always --no-startup-id ff-theme-util
 exec_always --no-startup-id fix_xcursor
 exec_always --no-startup-id export DISPLAY=:0; xset r rate 250 30
 
+exec --no-startup-id /usr/lib/gnome-settings-daemon/gnome-settings-daemon
+
 
 # Color palette used for the terminal ( ~/.Xresources file )
 # Colors are gathered based on the documentation:xsetroot -solid "#000000"
@@ -458,21 +462,21 @@ set_from_resource $term_color15    color15
 # 	i3bar_command i3bar
 # 	status_command i3status
 # 	position bottom
-
+#
 # ## please set your primary output first. Example: 'xrandr --output eDP1 --primary'
 # #	tray_output primary
 # #	tray_output eDP1
-
+#
 # 	bindsym button4 nop
 # 	bindsym button5 nop
 # #   font xft:URWGothic-Book 11
 # 	strip_workspace_numbers yes
-
+#
 #     colors {
 #         background #222D31
 #         statusline #F9FAF9
 #         separator  #454947
-
+#
 # #                      border  backgr. text
 #         focused_workspace  #F9FAF9 #16a085 #292F34
 #         active_workspace   #595B5B #353836 #FDF6E3
