--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -666,17 +666,17 @@ map kitty_mod+down move_window_backward
 # map kitty_mod+right next_tab
 # map kitty_mod+left  previous_tab
 map kitty_mod+]       no_op
-map kitty_mod+]       next_tab
+map kitty_mod+]       move_tab_forward
 map kitty_mod+[       no_op
-map kitty_mod+[       previous_tab
+map kitty_mod+[       move_tab_backward
 # map kitty_mod+t     new_tab
 # map kitty_mod+q     close_tab
 # map kitty_mod+.     move_tab_forward
 # map kitty_mod+,     move_tab_backward
 map kitty_mod+right   no_op
-map kitty_mod+right   move_tab_forward
+map kitty_mod+right   next_tab
 map kitty_mod+left    no_op
-map kitty_mod+left    move_tab_backward
+map kitty_mod+left    previous_tab
 # map kitty_mod+alt+t set_tab_title
 map kitty_mod+t       no_op
 map kitty_mod+t       new_tab_with_cwd
