--- a/config/polybar/config
+++ b/config/polybar/config
@@ -386,7 +386,7 @@ pin-workspaces = true
 
 ; This will split the workspace name on ':'
 ; Default: false
-strip-wsnumbers = false
+strip-wsnumbers = true
 
 ; Sort the workspaces by index instead of the default
 ; sorting that groups the workspaces by output
@@ -418,17 +418,17 @@ fuzzy-match = false
 
 ;extra icons to choose from
 ;http://fontawesome.io/cheatsheet/
-;         v     
+;           v     
 
 ws-icon-0 = 1; 
 ws-icon-1 = 2; 
 ws-icon-2 = 3; 
 ws-icon-3 = 4; 
 ws-icon-4 = 5; 
-ws-icon-5 = 6; 
+ws-icon-5 = 6;  
 ws-icon-6 = 7; 
 ws-icon-7 = 8; 
-ws-icon-8 = 9; 
+ws-icon-8 = 9;  
 ws-icon-9 = 10; 
 ws-icon-default = " "
 
