--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -31,8 +31,8 @@ font_size 8.6
 
 #: Font size (in pts)
 
-adjust_line_height  2
-# adjust_column_width 0
+adjust_line_height  12
+adjust_column_width 1
 
 #: Change the size of each character cell kitty renders. You can use
 #: either numbers, which are interpreted as pixels or percentages
@@ -53,7 +53,7 @@ adjust_line_height  2
 
 #:     symbol_map codepoints Font Family Name
 
-symbol_map U+E000-U+FFFF FuraCode Nerd Font
+# symbol_map U+E000-U+FFFF FuraCode Nerd Font
 
 # box_drawing_scale 0.001, 1, 1.5, 2
 
