update kitty config

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -27,12 +27,12 @@ bold_italic_font Fira Code Bold
 # italic_font      FuraCode Nerd Font Mono Italic
 # bold_italic_font FuraCode Nerd Font Mono Bold Italic
 
-font_size 8.6
+font_size 9
 
 #: Font size (in pts)
 
-adjust_line_height  12
-adjust_column_width 1
+adjust_line_height  4
+# adjust_column_width 1
 
 #: Change the size of each character cell kitty renders. You can use
 #: either numbers, which are interpreted as pixels or percentages
@@ -53,7 +53,7 @@ adjust_column_width 1
 
 #:     symbol_map codepoints Font Family Name
 
-# symbol_map U+E000-U+FFFF FuraCode Nerd Font
+symbol_map U+E000-U+FFFF FuraCode Nerd Font
 
 # box_drawing_scale 0.001, 1, 1.5, 2
 
