major updates in progress

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -523,6 +523,8 @@ editor nvim
 
 #: }}}
 
+macos_titlebar_color background
+
 #: Keyboard shortcuts {{{
 
 #: For a list of key names, see: GLFW keys
