--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -282,7 +282,7 @@ inactive_border_color #22262d
 #: The color for the border of inactive windows in which a bell has
 #: occurred
 
-inactive_text_alpha .8
+inactive_text_alpha 1
 
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
