--- a/config/nvim/coc-settings.json
+++ b/config/nvim/coc-settings.json
@@ -8,16 +8,24 @@
     "suggest.maxPreviewWidth": 100,
     "diagnostic.checkCurrentLine": true,
     "diagnostic.maxWindowHeight": 20,
-    "diagnostic.errorSign": "✖",
+    "diagnostic.errorSign": "X",
     "diagnostic.warningSign": "⚠",
-    "diagnostic.infoSign": "●",
-    "diagnostic.hintSign": "○",
+    "diagnostic.infoSign": "I",
+    "diagnostic.hintSign": "I",
     "git.addGBlameToBufferVar": true,
     "coc.preferences.formatOnSaveFiletypes": ["typescript", "javascript", "javascript.jsx", "typescript.tsx", "typescriptreact", "javascriptreact"],
     "explorer.icon.enableNerdfont": true,
     "explorer.sources": [
         {"name": "buffer", "expand": true},
         {"name": "file", "expand": true}
+    ],
+    "intelephense.files.exclude": [
+        "**/vendor/**",
+        "**/build/**",
+        "**/packages/**",
+        "**/node_modules/**",
+        "**/wp-includes/**",
+        "**/wp-admin/**"
     ],
     "explorer.file.column.git.icon.added": "✚",
     "explorer.file.column.git.icon.deleted": "✖",
