--- a/config/nvim/coc-settings.json
+++ b/config/nvim/coc-settings.json
@@ -1,13 +1,67 @@
 {
     "suggest.enablePreview": true,
+    "suggest.completionItemKindLabels": {
+        "keyword": "\uf1de",
+        "variable": "\ue79b",
+        "value": "\uf89f",
+        "operator": "\u03a8",
+        "function": "\u0192",
+        "reference": "\ufa46",
+        "constant": "\uf8fe",
+        "method": "\uf09a",
+        "struct": "\ufb44",
+        "class": "\uf0e8",
+        "interface": "\uf417",
+        "text": "\ue612",
+        "enum": "\uf435",
+        "enumMember": "\uf02b",
+        "module": "\uf40d",
+        "color": "\ue22b",
+        "property": "\ue624",
+        "field": "\uf9be",
+        "unit": "\uf475",
+        "event": "\ufacd",
+        "file": "\uf723",
+        "folder": "\uf114",
+        "snippet": "\ue60b",
+        "typeParameter": "\uf728",
+        "default": "\uf29c"
+    },
+    "languageserver": {
+        "ccls": {
+            "command": "ccls",
+            "filetypes": ["c", "cpp", "cuda", "objc", "objcpp"],
+            "rootPatterns": [".ccls", "compile_commands.json", ".vim/", ".git/", ".hg/"],
+            "initializationOptions": {
+                "cache": {
+                    "directory": ".ccls-cache"
+                },
+                // from clang -v -fsyntax-only -x c++ /dev/null
+                "clang": {
+                    "extraArgs": [
+                        "-isystem/usr/local/include",
+                        "-isystem/Library/Developer/CommandLineTools/usr/bin/../include/c++/v1",
+                        "-isystem/Library/Developer/CommandLineTools/usr/lib/clang/11.0.0/include",
+                        "-isystem/Library/Developer/CommandLineTools/usr/include",
+                        "-isystem/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include"
+                    ],
+                    "resourceDir": "/Library/Developer/CommandLineTools/usr/lib/clang/11.0.0"
+                }
+            }
+        }
+    },
+    "python.jediEnabled": false,
     "codeLens.enable": true,
     "git.addedSign.text": "┃",
     "git.removedSign.text": "┃",
     "git.changedSign.text": "┃",
     "git.changeRemovedSign.text": "┃",
     "suggest.maxPreviewWidth": 100,
+    "diagnostic.enable": true,
     "diagnostic.checkCurrentLine": true,
+    "diagnostic.messageTarget": "echo",
     "diagnostic.maxWindowHeight": 20,
+    "diagnostic.locationlist": false,
     "diagnostic.errorSign": "X",
     "diagnostic.warningSign": "⚠",
     "diagnostic.infoSign": "I",
