--- a/config/nvim/coc-settings.example.json
+++ b/config/nvim/coc-settings.example.json
@@ -70,11 +70,15 @@
     "diagnostic.hintSign": "I",
     "git.addGBlameToBufferVar": true,
     "coc.preferences.formatOnSaveFiletypes": ["typescript", "javascript", "javascript.jsx", "typescript.tsx", "typescriptreact", "javascriptreact"],
-    "explorer.icon.enableNerdfont": true,
-    "explorer.sources": [
-        {"name": "buffer", "expand": true},
-        {"name": "file", "expand": true}
-    ],
+    "intelephense.diagnostics": {
+        "undefinedTypes": false,
+        "undefinedFunctions": true,
+        "undefinedConstants": true,
+        "undefinedClassConstants": true,
+        "undefinedMethods": false,
+        "undefinedProperties": false,
+        "undefinedVariables": false
+    },
     "intelephense.files.exclude": [
         "**/vendor/**",
         "**/build/**",
@@ -82,6 +86,11 @@
         "**/node_modules/**",
         "**/wp-includes/**",
         "**/wp-admin/**"
+    ],
+    "explorer.icon.enableNerdfont": true,
+    "explorer.sources": [
+        {"name": "buffer", "expand": true},
+        {"name": "file", "expand": true}
     ],
     "explorer.file.column.git.icon.added": "✚",
     "explorer.file.column.git.icon.deleted": "✖",
@@ -91,5 +100,12 @@
     "explorer.file.column.git.icon.modified": "",
     "explorer.file.column.git.icon.ignored": "☒",
     "explorer.openAction.changeDirectory": false,
+    "explorer.contentWidth": 70,
+    "explorer.width": 70,
+    "explorer.position": "floating",
+    "explorer.floating.position": "left-center",
+    "explorer.floating.width": 70,
+    "explorer.floating.contentWidth": 70,
+    "explorer.floating.height": 0,
     "eslint.enable": false
 }
