--- a/config/nvim/coc-settings.example.json
+++ b/config/nvim/coc-settings.example.json
@@ -70,9 +70,12 @@
     "diagnostic.hintSign": "I",
     "git.addGBlameToBufferVar": true,
     "coc.preferences.formatOnSaveFiletypes": ["typescript", "javascript", "javascript.jsx", "typescript.tsx", "typescriptreact", "javascriptreact"],
+    "prettier.singleQuote": true,
+    "prettier.tabWidth": 4,
+    "prettier.printWidth": 120,
     "intelephense.diagnostics": {
         "undefinedTypes": false,
-        "undefinedFunctions": true,
+        "undefinedFunctions": false,
         "undefinedConstants": true,
         "undefinedClassConstants": true,
         "undefinedMethods": false,
@@ -99,6 +102,7 @@
     "explorer.file.column.git.icon.untracked": "?",
     "explorer.file.column.git.icon.modified": "",
     "explorer.file.column.git.icon.ignored": "☒",
+    "explorer.previewAction.onHover": false,
     "explorer.openAction.changeDirectory": false,
     "explorer.contentWidth": 70,
     "explorer.width": 70,
@@ -107,5 +111,6 @@
     "explorer.floating.width": 70,
     "explorer.floating.contentWidth": 70,
     "explorer.floating.height": 0,
-    "eslint.enable": false
+    "eslint.enable": false,
+    "tslint.autoFixOnSave": false
 }
