--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -810,7 +810,7 @@ map kitty_mod+backspace change_font_size all 0
 
 #: }}}
 
-map ctrl+space send_text all \x10
-map ctrl+s send_text all ^[[24;2~
+# map ctrl+space send_text all \x10
+# map ctrl+s send_text all ^[[24;2~
 
 # }}}
