--- a/config/compton/compton.conf
+++ b/config/compton/compton.conf
@@ -50,7 +50,7 @@ alpha-step = 0.06;
 
 opacity-rule = [
 	"85:class_g = 'Termite'",
-	"85:class_g = 'Pcmanfm'",
+	# "85:class_g = 'Pcmanfm'",
 	# "50:class_g = 'Rofi'",
 	# "85:class_g = 'Code'",
 	# "85:class_g = 'code'",
