--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -197,7 +197,7 @@ cursor_blink_interval      0
 
 #: Terminal bell {{{
 
-enable_audio_bell yes
+enable_audio_bell no
 
 #: Enable/disable the audio bell. Useful in environments that require
 #: silence.
@@ -331,88 +331,7 @@ inactive_tab_font_style light
 
 #: }}}
 
-#: Color scheme {{{
-
-foreground #abb2bf
-background #282c34
-
-#: The foreground and background colors
-
-# background_opacity         0.85
-# dynamic_background_opacity yes
-
-#: The opacity of the background. A number between 0 and 1, where 1 is
-#: opaque and 0 is fully transparent.  This will only work if
-#: supported by the OS (for instance, when using a compositor under
-#: X11). Note that it only sets the default background color's
-#: opacity. This is so that things like the status bar in vim,
-#: powerline prompts, etc. still look good.  But it means that if you
-#: use a color theme with a background color in your editor, it will
-#: not be rendered as transparent.  Instead you should change the
-#: default background color in your kitty config and not use a
-#: background color in the editor color scheme. Or use the escape
-#: codes to set the terminals default colors in a shell script to
-#: launch your editor.  Be aware that using a value less than 1.0 is a
-#: (possibly significant) performance hit.  If you want to dynamically
-#: change transparency of windows set dynamic_background_opacity to
-#: yes (this is off by default as it has a performance cost)
-
-# dim_opacity 0.75
-
-#: How much to dim text that has the DIM/FAINT attribute set. One
-#: means no dimming and zero means fully dimmed (i.e. invisible).
-
-# selection_foreground #000000
-# selection_background #FFFACD
-
-#: The foreground and background for text selected with the mouse
-
-
-#: The 16 terminal colors. There are 8 basic colors, each color has a
-#: dull and bright version. You can also set the remaining colors from
-#: the 256 color table as color16 to color255.
-
-color0 #282c34
-color8 #1d1d1d
-
-#: black
-
-color1 #be5046
-color9 #e06c75
-
-#: red
-
-color2  #98c379
-color10 #98c379
-
-#: green
-
-color3  #d19a66
-color11 #e5c07b
-
-#: yellow
-
-color4  #61afef
-color12 #61afef
-
-#: blue
-
-color5  #c678dd
-color13 #c678dd
-
-#: magenta
-
-color6  #56b6c2
-color14 #56b6c2
-
-#: cyan
-
-color7  #abb2bf
-color15 #ffffff
-
-#: white
-
-#: }}}
+include ./onedark-theme.conf
 
 #: Advanced {{{
 
