add bat + floating windows in vim

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -6,10 +6,12 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Fira Code
-bold_font        Fira Code Bold
-italic_font      Fira Code
-bold_italic_font Fira Code Bold
+font_family      FiraCode Nerd Font Mono
+
+# font_family      Fira Code
+# bold_font        Fira Code Bold
+# italic_font      Fira Code
+# bold_italic_font Fira Code Bold
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. By default they are derived automatically, by the OSes
@@ -53,7 +55,7 @@ adjust_line_height  4
 
 #:     symbol_map codepoints Font Family Name
 
-symbol_map U+E000-U+FFFF FuraCode Nerd Font
+# symbol_map U+E000-U+FFFF FuraCode Nerd Font
 
 # box_drawing_scale 0.001, 1, 1.5, 2
 
