--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -6,10 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Fira Code
-bold_font        Fira Code Bold
-italic_font      Fira Code
-bold_italic_font Fira Code Bold
+font_family      Fira Code Nerd Font
+bold_font        Fira Code Nerd Font Bold
+# italic_font      Fira Code Nerd Font Mono
+# bold_italic_font Fira Code Nerd Font Mono Bold
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. By default they are derived automatically, by the OSes
@@ -21,11 +21,6 @@ bold_italic_font Fira Code Bold
 #:     bold_font        Operator Mono Medium
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
-
-# font_family      FuraCode Nerd Font Mono
-# bold_font        FuraCode Nerd Font Mono Bold
-# italic_font      FuraCode Nerd Font Mono Italic
-# bold_italic_font FuraCode Nerd Font Mono Bold Italic
 
 font_size 9
 
@@ -53,7 +48,7 @@ adjust_line_height  4
 
 #:     symbol_map codepoints Font Family Name
 
-symbol_map U+E000-U+FFFF FuraCode Nerd Font
+# symbol_map U+E000-U+FFFF FuraCode Nerd Font
 
 # box_drawing_scale 0.001, 1, 1.5, 2
 
