--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -6,7 +6,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-+font_family      FiraCode Nerd Font Mono
+font_family      FiraCode Nerd Font Mono
 
 # font_family      Fira Code
 # bold_font        Fira Code Bold
