--- a/config/polybar/config
+++ b/config/polybar/config
@@ -131,7 +131,7 @@ font-1 = "FuraCode Nerd Font Mono:size=14;3"
 
 modules-left = i3 xwindow
 modules-center =
-modules-right = filesystem memory3 cpu1 networkspeedup networkspeeddown date
+modules-right = networkspeedup networkspeeddown filesystem memory3 cpu1 battery date
 ; modules-right = filesystem memory3 cpu1 xkeyboard wireless-network networkspeedup networkspeeddown date
 
 # separator = ┃
@@ -703,13 +703,13 @@ adapter = AC0
 full-at = 100
 
 format-charging = <animation-charging> <label-charging>
-label-charging =  %percentage%%
+label-charging = %percentage%%
 format-charging-foreground = ${colors.foreground}
 format-charging-background = ${colors.background}
 format-charging-underline = #a3c725
 
 format-discharging = <ramp-capacity> <label-discharging>
-label-discharging =  %percentage%%
+label-discharging = %percentage%%
 format-discharging-underline = #c7ae25
 format-discharging-foreground = ${colors.foreground}
 format-discharging-background = ${colors.background}
@@ -1126,7 +1126,7 @@ format-connected = <label-connected>
 ;http://fontawesome.io/cheatsheet/
 ;    
 
-format-connected-prefix = ""
+format-connected-prefix = " "
 format-connected-prefix-foreground = #d19a66
 format-connected-foreground = ${colors.foreground}
 format-connected-background = ${colors.background}
@@ -1149,7 +1149,7 @@ format-connected = <label-connected>
 ;http://fontawesome.io/cheatsheet/
 ;    
 
-format-connected-prefix = ""
+format-connected-prefix = " "
 format-connected-prefix-foreground = #d19a66
 format-connected-foreground = ${colors.foreground}
 format-connected-background = ${colors.background}
