--- a/config/i3/config
+++ b/config/i3/config
@@ -190,7 +190,7 @@ bindsym $mod+Shift+space floating toggle
 
 # toggle sticky
 # bindsym $mod+Shift+s sticky toggle
-bindsym $mod+Shift+s exec ~/.dotfiles/config/i3/i3-display-swap.sh
+# bindsym $mod+Shift+s exec ~/.dotfiles/config/i3/i3-display-swap.sh
 
 # focus the parent container
 bindsym $mod+a focus parent
@@ -226,8 +226,10 @@ set $ws9 9
 set $ws10 10
 
 # set the connected monitors
-set $monitor1 HDMI2
-set $monitor2 DP2
+# set $monitor1 HDMI2
+set $monitor1 LVDS-1
+# set $monitor2 DP2
+set $monitor2 DP-1-3
 
 # Bind the workspaces for monitor one
 workspace $ws1 output $monitor1
@@ -399,10 +401,7 @@ exec --no-startup-id $HOME/.dotfiles/resources/i3/tap-to-click.sh
 exec --no-startup-id numlockx off
 # exec_always --no-startup-id xset r rate 250 30
 exec_always --no-startup-id setxkbmap -option 'ctrl:nocaps,shift:both_capslock_cancel'
-exec_always --no-startup-id setxkbmap -option compose:ralt
-
-# polybar
-exec_always --no-startup-id $HOME/.dotfiles/resources/i3/launch-polybar.sh
+# exec_always --no-startup-id setxkbmap -option compose:ralt
 
 # restore layouts
 exec --no-startup-id i3-msg "workspace 3; append_layout ~/.dotfiles/config/i3/layouts/workspace-3.json; exec thunderbird"
@@ -417,8 +416,6 @@ exec --no-startup-id i3-msg "workspace 2; workspace 1; exec $myTerm"
 
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 # exec_always --no-startup-id compton -b --config $HOME/.config/compton/compton.conf
-exec --no-startup-id nitrogen --restore; sleep 1
-# exec --no-startup-id feh --randomize --bg-fill $HOME/.dotfiles/resources/wallpapers/*
 exec --no-startup-id nm-applet
 exec --no-startup-id xfce4-power-manager
 exec --no-startup-id pamac-tray
@@ -426,12 +423,24 @@ exec --no-startup-id clipit
 exec --no-startup-id blueman-applet
 # exec_always --no-startup-id sbxkb
 # exec --no-startup-id start_conky_maia
-exec --no-startup-id $HOME/.dotfiles/resources/i3/launch-conky-one-dark.sh
 exec --no-startup-id xautolock -time 10 -locker blurlock
 exec --no-startup-id redshift -P -t 5000:4000
 exec_always --no-startup-id ff-theme-util
 exec_always --no-startup-id fix_xcursor
-exec_always --no-startup-id export DISPLAY=:0; xset r rate 250 30
+
+# KEYBOARD
+exec_always --no-startup-id xset r rate 250 30
+
+# DISPLAY
+exec_always --no-startup-id export DISPLAY=:0
+exec_always --no-startup-id $HOME/.dotfiles/resources/i3/initialize-multimonitor-setup.sh
+
+# polybar
+exec_always --no-startup-id sleep 0.5 && $HOME/.dotfiles/resources/i3/launch-polybar.sh
+
+exec_always --no-startup-id sleep 0.5 && $HOME/.dotfiles/resources/i3/launch-conky-one-dark.sh
+# exec --no-startup-id feh --randomize --bg-fill $HOME/.dotfiles/resources/wallpapers/*
+exec_always --no-startup-id sleep 0.5 && nitrogen --restore
 
 exec --no-startup-id /usr/lib/gnome-settings-daemon/gnome-settings-daemon
 
