--- a/config/polybar/config
+++ b/config/polybar/config
@@ -29,8 +29,8 @@ compositing-underline = over
 compositing-border = over
 
 ; Define fallback values used by all module formats
-format-foreground = #FF0000
-format-background = #00FF00
+format-foreground = #abb2bf
+format-background = #282c34
 format-underline =
 format-overline =
 format-spacing =
@@ -131,7 +131,7 @@ font-1 = "FuraCode Nerd Font Mono:size=14;3"
 
 modules-left = i3 xwindow
 modules-center =
-modules-right = networkspeedup networkspeeddown filesystem memory3 cpu1 battery date
+modules-right = networkspeedup networkspeeddown filesystem memory3 cpu1 battery xkeyboard date
 ; modules-right = filesystem memory3 cpu1 xkeyboard wireless-network networkspeedup networkspeeddown date
 
 # separator = ┃
@@ -717,6 +717,9 @@ format-discharging-background = ${colors.background}
 format-full-prefix = " "
 format-full-prefix-foreground = #a3c725
 format-full-underline = #a3c725
+format-full-foreground = ${colors.foreground}
+format-full-background = ${colors.background}
+
 format-foreground = ${colors.foreground}
 format-background = ${colors.background}
 
