--- a/config/ranger/rc.conf
+++ b/config/ranger/rc.conf
@@ -87,8 +87,8 @@ set preview_images true
 # * urxvt-full:
 #   The same as urxvt but utilizing not only the preview pane but the
 #   whole terminal window.
-# set preview_images_method w3m
-set preview_images_method kitty # does not work in tmux
+set preview_images_method w3m
+# set preview_images_method kitty # does not work in tmux
 
 # Use a unicode "..." character to mark cut-off filenames?
 set unicode_ellipsis false
