--- a/config/nvim/coc-settings.example.json
+++ b/config/nvim/coc-settings.example.json
@@ -50,8 +50,8 @@
             }
         }
     },
-    "vetur.format.options.tabSize": 4,
-    "vetur.dev.vlsPath": "/Users/artemschander/.config/yarn/global/node_modules/vue-language-server",
+    "vetur.format.options.tabSize": 2,
+    "vetur.dev.vlsPath": "~/.config/yarn/global/node_modules/vue-language-server",
     "python.jediEnabled": false,
     "codeLens.enable": true,
     "git.addedSign.text": "┃",
@@ -70,9 +70,11 @@
     "diagnostic.hintSign": "I",
     "git.addGBlameToBufferVar": true,
     "coc.preferences.formatOnSaveFiletypes": ["typescript", "javascript", "javascript.jsx", "typescript.tsx", "typescriptreact", "javascriptreact"],
+    "coc.preferences.hoverTarget": "echo",
     "prettier.singleQuote": true,
     "prettier.tabWidth": 4,
     "prettier.printWidth": 120,
+    "intelephense.licenceKey": "",
     "intelephense.diagnostics": {
         "undefinedTypes": false,
         "undefinedFunctions": false,
@@ -92,13 +94,21 @@
     ],
     "explorer.icon.enableNerdfont": true,
     "explorer.sources": [
-        {"name": "buffer", "expand": true},
+        // {"name": "buffer", "expand": false},
         {"name": "file", "expand": true}
     ],
+    "explorer.file.column.git.icon.added": "✚",
+    "explorer.file.column.git.icon.deleted": "✖",
+    "explorer.file.column.git.icon.renamed": "➜",
+    "explorer.file.column.git.icon.unmerged": "═",
+    "explorer.file.column.git.icon.untracked": "?",
+    "explorer.file.column.git.icon.modified": "",
+    "explorer.file.column.git.icon.ignored": "☒",
     "explorer.previewAction.onHover": false,
     "explorer.openAction.for.directory": "expandOrCollapse",
     "explorer.contentWidth": 70,
     "explorer.width": 70,
+    // "explorer.position": "left",
     "explorer.position": "floating",
     "explorer.floating.position": "left-center",
     "explorer.floating.width": 70,
