--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -266,7 +266,7 @@ window_padding_width 0
 #: The window padding (in pts) (blank area between the text and the
 #: window border)
 
-active_border_color #282c34
+active_border_color #1e2127
 
 #: The color for the border of the active window
 
@@ -317,11 +317,11 @@ tab_fade 1 1 1
 #: The separator between tabs in the tab bar when using separator as
 #: the tab_bar_style.
 
-active_tab_foreground   #282c34
+active_tab_foreground   #1e2127
 active_tab_background   #bbbbbb
 active_tab_font_style   normal
 inactive_tab_foreground #abb2bf
-inactive_tab_background #282c34
+inactive_tab_background #1e2127
 inactive_tab_font_style light
 
 #: Tab bar colors and styles
@@ -397,7 +397,7 @@ listen_on unix:/tmp/mykitty
 
 #: OS specific tweaks {{{
 
-# macos_titlebar_color #282c34
+# macos_titlebar_color #1e2127
 
 #: Change the color of the kitty window's titlebar on macOS. A value
 #: of system means to use the default system color, a value of
