--- a/config/kitty/onedark-theme.conf
+++ b/config/kitty/onedark-theme.conf
@@ -1,7 +1,7 @@
-background #282c34
+background #1e2127
 foreground #abb2bf
 cursor #abb2bf
-color0 #282c34
+color0 #1e2127
 color1 #be5046
 color2 #98c379
 color3 #d19a66
