kitty font config

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -6,7 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      FiraCode Nerd Font Mono
+# NOTE: no need for patched fonts .. kitty pickes up the symbols automatically
+# see: https://github.com/kovidgoyal/kitty/issues/2022#issuecomment-583249783
+# font_family      Fira Code Nerd Font Regular
+font_family Fira Code
 
 # font_family      Fira Code
 # bold_font        Fira Code Bold
