--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -71,7 +71,9 @@ cursor white
 
 #: Default cursor color
 
-cursor_shape beam
+# cursor_shape beam
+cursor_shape underline
+cursor_underline_thickness 1
 
 #: The cursor shape can be one of (block, beam, underline)
 
