--- a/config/i3/config
+++ b/config/i3/config
@@ -29,7 +29,7 @@ bindsym $mod+b border normal
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font xft:Fira Code 8
+font xft:JetBrains Mono 8
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
