--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -19,10 +19,15 @@
 # italic_font      Victor Mono Italic
 # bold_italic_font Victor Mono Bold Italic
 
-font_family      JetBrains Mono
-bold_font        JetBrains Mono Bold
-italic_font      JetBrains Mono Italic
-bold_italic_font JetBrains Mono Bold Italic
+# font_family      JetBrains Mono
+# bold_font        JetBrains Mono Bold
+# italic_font      JetBrains Mono Italic
+# bold_italic_font JetBrains Mono Bold Italic
+
+font_family      JetBrainsMono Nerd Font
+bold_font        JetBrainsMono Nerd Font Bold
+italic_font      JetBrainsMono Nerd Font Italic
+bold_italic_font JetBrainsMono Nerd Font Bold Italic
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. By default they are derived automatically, by the OSes
