--- a/config/bat/bat.conf
+++ b/config/bat/bat.conf
@@ -1,6 +1,7 @@
 # Set the theme to "TwoDark"
---theme="OneHalfDark"
+# --theme="OneHalfDark"
 # --theme="TwoDark"
+--theme="Enki-Tokyo-Night"
 
 # Show line numbers, Git modifications and file header (but no grid)
 --style="numbers,changes,header"
