--- a/config/kitty/tokyonight-theme.conf
+++ b/config/kitty/tokyonight-theme.conf
@@ -18,4 +18,4 @@ color13 #9d7cd8
 color14 #0db9d7
 color15 #c0caf5
 selection_background #a9b1d6
-selection_foreground #1f2335
+selection_foreground #16161e
