--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -44,6 +44,13 @@ font_size 9
 
 #: Font size (in pts)
 
+modify_font baseline 90%
+modify_font cell_height 240%
+modify_font cell_width 120%
+modify_font strikethrough_position 150%
+modify_font underline_position 1
+modify_font underline_thickness 60%
+
 force_ltr no
 
 #: kitty does not support BIDI (bidirectional text), however, for RTL
